@@ -35,45 +35,10 @@ gradle.taskGraph.whenReady({ graph ->
 
 
 subprojects {
-  dependencies {
-    testCompile('com.github.stefanbirkner:system-rules:' + project.'system-rules.version') {
-      exclude module: 'junit-dep'
-    }
-    testCompile 'com.google.code.tempus-fugit:tempus-fugit:' + project.'tempus-fugit.version'
-    testCompile 'org.awaitility:awaitility:' + project.'awaitility.version'
-    testCompile 'edu.umd.cs.mtc:multithreadedtc:' + project.'multithreadedtc.version'
-    testCompile 'eu.codearte.catch-exception:catch-exception:' + project.'catch-exception.version'
-    testCompile 'eu.codearte.catch-exception:catch-throwable:' + project.'catch-throwable.version'
-    testCompile 'junit:junit:' + project.'junit.version'
-    testCompile 'org.assertj:assertj-core:' + project.'assertj-core.version'
-    testCompile 'org.hamcrest:hamcrest-all:' + project.'hamcrest-all.version'
-    testCompile 'org.jmock:jmock-junit4:' + project.'jmock.version'
-    testCompile 'org.jmock:jmock-legacy:' + project.'jmock.version'
-
-    testCompile 'org.mockito:mockito-core:' + project.'mockito-core.version'
-    testCompile 'org.powermock:powermock-core:' + project.'powermock.version'
-    testCompile 'org.powermock:powermock-module-junit4:' + project.'powermock.version'
-    testCompile 'org.powermock:powermock-api-mockito2:' + project.'powermock.version'
-
-    testCompile 'pl.pragmatists:JUnitParams:' + project.'JUnitParams.version'
-
-    testRuntime 'cglib:cglib:' + project.'cglib.version'
-  }
-
+  // This configuration might be safely removed once the CategoryWithParameterizedRunnerFactory
+  // and associated classes are themselves removed, per GEODE-5606
   configurations {
     apt
-  }
-
-  dependencies {
-    apt files("${rootProject.projectDir}/buildSrc/build/libs/buildSrc.jar")
-    apt(group: 'junit', name: 'junit', version: project.'junit.version') {
-      transitive = false
-    }
-    // Because EnsureCorrectRunsWithProcessor needs access to
-    // CategoryWithParameterizedRunnerFactory. The specific version of geode-junit is not important.
-    apt(group: 'org.apache.geode', name: 'geode-junit', version: '1.3.0') {
-      transitive = false
-    }
   }
 
   compileTestJava {
@@ -84,7 +49,11 @@ subprojects {
     doFirst {
       TestPropertiesWriter.writeTestProperties(buildDir, name)
     }
-    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+    if (project.hasProperty('testMaxParallelForks')) {
+      maxParallelForks = Integer.parseUnsignedInt(project.testMaxParallelForks)
+    } else {
+      maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+    }
   }
 
   apply plugin: 'nebula.facet'
@@ -115,9 +84,54 @@ subprojects {
     }
   }
 
+  configurations {
+    testAnnotationProcessor.extendsFrom annotationProcessor
+    integrationTestAnnotationProcessor.extendsFrom annotationProcessor
+    distributedTestAnnotationProcessor.extendsFrom annotationProcessor
+    performanceTestAnnotationProcessor.extendsFrom annotationProcessor
+    acceptanceTestAnnotationProcessor.extendsFrom annotationProcessor
+    uiTestAnnotationProcessor.extendsFrom annotationProcessor
+    upgradeTestAnnotationProcessor.extendsFrom annotationProcessor
+    // Facets does not extend the new runtimeOnly configurations
+    integrationTestRuntimeOnly.extendsFrom(runtimeOnly)
+    distributedTestRuntimeOnly.extendsFrom(runtimeOnly)
+    performanceTestRuntimeOnly.extendsFrom(runtimeOnly)
+    acceptanceTestRuntimeOnly.extendsFrom(runtimeOnly)
+    uiTestRuntimeOnly.extendsFrom(runtimeOnly)
+    upgradeTestRuntimeOnly.extendsFrom(runtimeOnly)
+  }
+
   dependencies {
-    integrationTestCompile 'org.jmock:jmock-junit4:' + project.'jmock.version'
-    integrationTestCompile 'org.jmock:jmock-legacy:' + project.'jmock.version'
+    apt files("${rootProject.projectDir}/buildSrc/build/libs/buildSrc.jar")
+    apt(group: 'junit', name: 'junit', version: project.'junit.version') {
+      transitive = false
+    }
+    // Because EnsureCorrectRunsWithProcessor needs access to
+    // CategoryWithParameterizedRunnerFactory.
+    // buildSrc uses version 1.3.0, so we use it here instead of the local geode-junit project
+    apt(group: 'org.apache.geode', name: 'geode-junit', version: '1.3.0') {
+      transitive = false
+    }
+
+    testCompile('com.github.stefanbirkner:system-rules:' + project.'system-rules.version') {
+      exclude module: 'junit-dep'
+    }
+    testCompile 'com.google.code.tempus-fugit:tempus-fugit:' + project.'tempus-fugit.version'
+    testCompile 'org.awaitility:awaitility:' + project.'awaitility.version'
+    testCompile 'junit:junit:' + project.'junit.version'
+    testCompile 'org.assertj:assertj-core:' + project.'assertj-core.version'
+    testCompile 'org.hamcrest:hamcrest-all:' + project.'hamcrest-all.version'
+
+    testCompile 'org.mockito:mockito-core:' + project.'mockito-core.version'
+    testCompile 'org.powermock:powermock-core:' + project.'powermock.version'
+    testCompile 'org.powermock:powermock-module-junit4:' + project.'powermock.version'
+    testCompile 'org.powermock:powermock-api-mockito2:' + project.'powermock.version'
+
+    testCompile 'pl.pragmatists:JUnitParams:' + project.'JUnitParams.version'
+
+    testRuntime('cglib:cglib:' + project.'cglib.version') {
+      exclude module: 'org.apache.ant'
+    }
 
     integrationTestCompile 'org.mockito:mockito-core:' + project.'mockito-core.version'
 
@@ -138,13 +152,11 @@ subprojects {
     outputs.upToDateWhen { false }
   }
 
-  // Until the category can be removed, we exclude FlakyTest from some targets.
   configure([integrationTest, distributedTest, performanceTest]) {
     useJUnit {
       if (project.hasProperty("testCategory")) {
         includeCategories += project.testCategory
       }
-      excludeCategories 'org.apache.geode.test.junit.categories.FlakyTest'
     }
   }
 
@@ -155,69 +167,51 @@ subprojects {
     }
   }
 
-  task repeatTest(type: RepeatTest) {
+  task repeatDistributedTest(type: RepeatTest) {
+    dependsOn {distributedTest.taskDependencies}
+    classpath = project.sourceSets.distributedTest.runtimeClasspath
+    testClassesDirs = project.sourceSets.distributedTest.output.classesDirs
+  }
+
+  task repeatIntegrationTest(type: RepeatTest) {
+    dependsOn {integrationTest.taskDependencies}
+    classpath = project.sourceSets.integrationTest.runtimeClasspath
+    testClassesDirs = project.sourceSets.integrationTest.output.classesDirs
+  }
+
+  task repeatAcceptanceTest(type: RepeatTest) {
+    dependsOn {acceptanceTest.taskDependencies}
+    classpath = project.sourceSets.acceptanceTest.runtimeClasspath
+    testClassesDirs = project.sourceSets.acceptanceTest.output.classesDirs
+  }
+
+  task repeatUpgradeTest(type: RepeatTest) {
+    dependsOn {upgradeTest.taskDependencies}
+    classpath = project.sourceSets.upgradeTest.runtimeClasspath
+    testClassesDirs = project.sourceSets.upgradeTest.output.classesDirs
+  }
+
+  task repeatUnitTest(type: RepeatTest) {
+    dependsOn {test.taskDependencies}
+    // default classpath works for this one.
+  }
+
+  configure([integrationTest, distributedTest, performanceTest, acceptanceTest, uiTest, upgradeTest]) {
+    if (project.hasProperty('excludeTest')) {
+      exclude project.getProperty('excludeTest').split(',')
+    }
+  }
+
+  configure([repeatDistributedTest, repeatIntegrationTest, repeatUpgradeTest, repeatUnitTest, repeatAcceptanceTest]) {
     times = Integer.parseInt(repeat)
-
     useJUnit {}
-
     outputs.upToDateWhen { false }
-
-    classpath += project.sourceSets.distributedTest.runtimeClasspath
-    testClassesDirs += project.sourceSets.distributedTest.output.classesDirs
-    classpath += project.sourceSets.integrationTest.runtimeClasspath
-    testClassesDirs += project.sourceSets.integrationTest.output.classesDirs
-    classpath += project.sourceSets.upgradeTest.runtimeClasspath
-    testClassesDirs += project.sourceSets.upgradeTest.output.classesDirs
-    classpath += project.sourceSets.acceptanceTest.runtimeClasspath
-    testClassesDirs += project.sourceSets.acceptanceTest.output.classesDirs
 
     if (project.hasProperty("failOnNoMatchingTests")) {
       filter {
         setFailOnNoMatchingTests(Boolean.valueOf(project.failOnNoMatchingTests))
       }
     }
-  }
-
-  task flakyTest(type: Test) {
-    useJUnit {
-      if (project.hasProperty("testCategory")) {
-        includeCategories += project.testCategory
-      }
-      includeCategories += 'org.apache.geode.test.junit.categories.FlakyTest'
-    }
-
-    forkEvery 1
-    doFirst {
-      TestPropertiesWriter.writeTestProperties(buildDir, name)
-    }
-
-    reports.junitXml.destination = file "$buildDir/test-reports-flaky"
-    outputs.upToDateWhen { false }
-  }
-
-  /*
-   * Don't add tasks for running specific category tests, instead use this
-   * property `testCategory` and set a FQCN of the required category.
-   * Eg: ./gradlew :geode-core:distributedTest -PtestCategory=org.apache.geode.test.junit.categories.GfshTest
-   *
-   * This provides developers a way to choose specific test source and test category.
-   *
-  */
-
-  // By proving a file with an arbitrary list of test classes, we can select only those
-  // tests to run. Activated using -Dcustom.tests=<file> customTest
-  def customTestList = []
-  def customTestFile = System.getProperty('custom.tests')
-  if (customTestFile != null) {
-    new File(customTestFile).eachLine { customTestList << it }
-  }
-
-  task customTest(type: Test) {
-    include { x ->
-      (x.isDirectory() || customTestList.any { y -> x.getName().contains(y) }) ? true : false
-    }
-
-    forkEvery 30
   }
 
   // apply common test configuration
@@ -236,18 +230,22 @@ subprojects {
         }
 
         maxHeapSize '768m'
-//        jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError', '-ea',"-XX:+PrintGC", "-XX:+PrintGCDetails","-XX:+PrintGCTimeStamps"]
         jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError', '-ea']
-        if (!testJVM.trim().isEmpty()) {
+        if (project.hasProperty('testJVMVer') &&  testJVMVer.toInteger() >= 9) {
+          jvmArgs += ["--add-opens", "java.xml/jdk.xml.internal=ALL-UNNAMED"]
+          jvmArgs += ["--add-opens", "java.base/jdk.internal.module=ALL-UNNAMED"]
+          jvmArgs += ["--add-opens", "java.base/java.lang.module=ALL-UNNAMED"]
+        }
+        if (project.hasProperty('testJVM') && !testJVM.trim().isEmpty()) {
           executable = "${testJVM}/bin/java"
         }
 
         systemProperty 'gemfire.DEFAULT_MAX_OPLOG_SIZE', '10'
         systemProperty 'gemfire.disallowMcastDefaults', 'true'
         systemProperty 'jline.terminal', 'jline.UnsupportedTerminal'
-        def logLevel = System.getProperty('logLevel')
+        def logLevel = System.getProperty('log-level')
         if (logLevel != null) {
-          systemProperty 'logLevel', logLevel
+          systemProperty 'log-level', logLevel
         }
         def log4jLocation = System.getProperty('log4j.configurationFile')
         if (log4jLocation != null) {
@@ -279,21 +277,31 @@ subprojects {
     }
   })
 
+  acceptanceTest {
+    // Acceptance tests may reach out and run a gfsh command from the assembled gfsh.
+    // If the test JVM version is specified, we must have the correct JAVA_HOME set for gfsh to use.
+    // See also environment configuration for parallel testing in docker.gradle
+    if (project.hasProperty('testJVM') && !testJVM.trim().isEmpty()) {
+      environment "JAVA_HOME", "${project.testJVM}"
+    }
+  }
+
+
   // Make precheckin task run all validation tests for checking in code.
   task precheckin(dependsOn: [build, acceptanceTest, integrationTest, distributedTest, upgradeTest]) {
     description 'Run this task before checking in code to validate changes. It runs tests beyond unitTest'
   }
 
-  combineReports.mustRunAfter check, test, integrationTest, distributedTest, flakyTest, acceptanceTest, repeatTest, upgradeTest
-  [build, check, test, integrationTest, distributedTest, flakyTest, acceptanceTest, repeatTest, upgradeTest].each {
+  tasks.withType(Test).plus([build,check]).each {
     it.finalizedBy combineReports
+    combineReports.mustRunAfter it
   }
 }
 
+classes.dependsOn subprojects.compileTestJava
 classes.dependsOn subprojects.compileIntegrationTestJava
 classes.dependsOn subprojects.compileDistributedTestJava
 classes.dependsOn subprojects.compileAcceptanceTestJava
 classes.dependsOn subprojects.compileUiTestJava
 classes.dependsOn subprojects.compilePerformanceTestJava
 classes.dependsOn subprojects.compileUpgradeTestJava
-
